--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Show-Me Coders||A Showcase of Skills</title>    
+<title>Nick Haynes</title>    
 <!--INSERT CSS-->
 <!--fonts-->
 
