--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Show-Me Coders||A Showcase of Skills</title>    
+<title>Nick Haynes</title>    
 <!--INSERT CSS-->
 <!--fonts-->
 
@@ -21,45 +21,11 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="../../scripts/smc.js"></script>
+<script src="scripts/smc.js"></script>
 
 </head>
 
 <body>
-
-
-
-<div id="header">
-
-
-    <div class="props"><p>A showcase of skills learned in conjunction <br> &nbsp; &nbsp; with  <a href="http://www.udacity.com" title="Udacity" style="vertical-align:bottom" target="_blank"><img src="https://github.com/ShowMeCoders/showmecoders/blob/development/assets/udacity.png?raw=true" height="15px"></a>  and  <a href="http://grow.google" title="Grow with Google" target="_blank"><img src="https://github.com/ShowMeCoders/showmecoders/blob/development/assets/gwg.png?raw=true" height="15px"></a></div>
-
-    <div class="banner">
-            <a href="https://showmecoders.github.io/showmecoders/" title="Show Me Coders"><img src="https://github.com/ShowMeCoders/showmecoders/blob/development/assets/showmecoders-logo1-white.png?raw=true" alt="Show-Me Coders"></a>
-    </div>
-
-<!-- Temp Remove Hamburger MENU   * REMOVE once menu is set *
-    <div class="hamburgerMenu">
-        <button onclick="headerMenu()" class="menuButton"><img src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSIjMDAwMDAwIiBoZWlnaHQ9IjI0IiB2aWV3Qm94PSIwIDAgMjQgMjQiIHdpZHRo%0D%0APSIyNCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KICAgIDxwYXRoIGQ9Ik0w%0D%0AIDBoMjR2MjRIMHoiIGZpbGw9Im5vbmUiLz4KICAgIDxwYXRoIGQ9Ik0zIDE4aDE4di0ySDN2Mnpt%0D%0AMC01aDE4di0ySDN2MnptMC03djJoMThWNkgzeiIvPgo8L3N2Zz4="></button>
-        <div id="menuOptions" class="menuContent">
-            <a href="forum.html" class="fullMenuLinks">Forum</a>
-            <a href="inspiration.html" class="fullMenuLinks">Inspiration</a>
-        </div>
-        Temp Remove Hamburger MENU     -->
-
-</div>
-
-
-
-<!-- Full Size MENU -->
-
-<div class="fullMenu">
-    <a href="forum.html" class="fullMenuLinks">Forum</a>
-    <a href="inspiration.html" class="fullMenuLinks">Inspiration</a>
-
-</div>
-
-<!--END HEADER -->
 
 <!--BEGIN MAIN -->    
 
@@ -112,7 +78,7 @@
     
 
 <div class="footer">
-        <strong>Copyright 2018 -</strong> Show-Me Coders
+        <strong>Copyright 2018 -</strong> Nick Haynes
 </div>
     
 
