Removed padding, added icons for GitHub and Codepen

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <a class="social" href="http://www.linkedin.com/in/nickhaynes"><img src="images/linkedin-box.svg" width="24px" class="social"></a>
             <a class="social" href="http://www.twitter.com"><img src="images/twitter-box.svg" width="24px" class="social"></a>
             <a class="social" href="http://www.facebook.com/j.n.haynes"><img src="images/facebook-box.svg" width="24px" class="social"></a>
+            <a class="social" href="http://www.codepen.io/tortfeasor"><img src="images/codepen-logo.svg" width="24px" class="social"></a>
+            <a class="social" href="https://www.github.com/nickhaynes"><img src="images/github-logo.svg" width="20px" class="social"></a>
         
         </div>
 
