--- a/about.html
+++ b/about.html
@@ -40,6 +40,8 @@
             <a class="social" href="http://www.linkedin.com/in/nickhaynes"><img src="images/linkedin-box-black.svg" width="24px" class="social"></a>
             <a class="social" href="http://www.twitter.com"><img src="images/twitter-box-black.svg" width="24px" class="social"></a>
             <a class="social" href="http://www.facebook.com/j.n.haynes"><img src="images/facebook-box-black.svg" width="24px" class="social"></a>
+            <a class="social" href="http://www.codepen.io/tortfeasor"><img src="images/codepen-logo-black.svg" width="24px" class="social"></a>
+            <a class="social" href="https://www.github.com/nickhaynes"><img src="images/github-logo-black.svg" width="20px" class="social"></a>
         
         </div>
 
@@ -67,9 +69,9 @@
 
             <p class="aboutText">In 2017, my wife and I relocated to the Greater St. Louis area for family reasons.  In turn, this allowed me the opportunity to do something I had contemplated for a couple of years: change careers.  I had burned out long before that, and became cynical and jaded with the entire process.  In addition, several things had changed in my life, which changed my own personal values, my political ideology, and what I was willing to do to succeed in my career.</p>
 
-            <p class="aboutText">I now work as an archives technician during the day, and do freelance web design and development work.  I'm also working through the Grow with Google program and Udacity, hoping to potentially turn this into a full-time career.  Programming and coding have always been enjoyable to me, but I now want more than just a hobby from it.</p>
+            <p class="aboutText">I now work as an archives technician during the day, and do freelance web design and development work.  I'm also working through the Grow with Google program and Udacity, working towards making this my full-time career.  Programming and web development have always been enjoyable to me, but I now want more than just a hobby from it.</p>
 
-            <p class="aboutText bottom">When I'm not doing all of that, you can find me at church, reading, listening to music, or watching sports--namely football, baseball, and (yes,) professional wrestling.  I live in Saint Charles County with my beautiful wife of four years, and our fur son Atticus, whom we rescued from a shelter.  My eventual life goal is to use whatever small skills I have to make the world a better place, and then retire and live on a mountain covered in snow most of the year.</p>
+            <p class="aboutText bottom">When I'm not doing all of that, you can find me at church, reading, listening to music, or watching sports--namely football, baseball, and (yes,) professional wrestling.  I live in Saint Charles County with my beautiful wife of four years, four amazing daughters, and our fur son Atticus, whom we rescued from a shelter.  My eventual life goal is to use whatever small skills I have to make the world a better place, and then retire and live on a mountainside covered in snow most of the year.</p>
     
         </div>
 
