--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,8 @@
         <a class="social" href="http://www.linkedin.com/in/nickhaynes"><img src="images/linkedin-box-black.svg" width="24px" class="social"></a>
         <a class="social" href="http://www.twitter.com"><img src="images/twitter-box-black.svg" width="24px" class="social"></a>
         <a class="social" href="http://www.facebook.com/j.n.haynes"><img src="images/facebook-box-black.svg" width="24px" class="social"></a>
+        <a class="social" href="http://www.codepen.io/tortfeasor"><img src="images/codepen-logo-black.svg" width="24px" class="social"></a>
+        <a class="social" href="https://www.github.com/nickhaynes"><img src="images/github-logo-black.svg" width="20px" class="social"></a>
     
     </div>
 
