Updated portfolio CSS and links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!--Start Small RWD Divs -->
 
-    <a href="portfolio.html" class="portfolioSmall"><div class="portfolioSmall">
+    <a href="portfolio/index.html" class="portfolioSmall"><div class="portfolioSmall">
 
         <h2>My Portfolio</h2><br><br>
         <h3>See what I've done for others.<br>Then see what I can do for you.</h3>
