--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,7 +55,7 @@
 
         <h2>Course Projects</h2>
         
-       <p class="portfolioSampleText">As I finish up my nanodegree through Udacity, I will put finished projects on this site, displaying a fuller range of my new skills.  The code for all projects (besides My Reads) can be found <a href=https://github.com/nickhaynes/Udacity-FEND">in my GitHub Udacity-FEND repo</a>.</p>
+       <p class="portfolioIntro">As I finish up my nanodegree through Udacity, I will put finished projects on this site, displaying a fuller range of my new skills.  The code for all projects (besides My Reads) can be found <a href=https://github.com/nickhaynes/Udacity-FEND">in my GitHub Udacity-FEND repo</a>.</p>
 
 	       	<ul class="portfolio-projects">
 	       		<li class="portfolio-project">
