Updated links in index

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
     <div class="portfolioMed">
 
-        <a href="portfolio.html"><img src="images/portfolioIconSmall.jpg"></a>
-        <br><a href="portfolio.html"><h2>My Portfolio</h2></a>
-        <a href="portfolio.html"><h3>See what I've done for others.<br>Then see what I can do for you.</h3></a>
+        <a href="portfolio/index.html"><img src="images/portfolioIconSmall.jpg"></a>
+        <br><a href="portfolio/index.html"><h2>My Portfolio</h2></a>
+        <a href="portfolio/index.html"><h3>See what I've done for others.<br>Then see what I can do for you.</h3></a>
 
     </div>
 
@@ -107,9 +107,9 @@
 
     <div class="portfolioLarge">
 
-        <a href="portfolio.html"><img src="images/portfolioIconSmall.jpg"></a>
-        <br><a href="portfolio.html"><h2>My Portfolio</h2></a>
-        <a href="portfolio.html"><h3>See what I've done for others.<br>Then see what I can do for you.</h3></a>
+        <a href="portfolio/index.html"><img src="images/portfolioIconSmall.jpg"></a>
+        <br><a href="portfolio/index.html"><h2>My Portfolio</h2></a>
+        <a href="portfolio/index.html"><h3>See what I've done for others.<br>Then see what I can do for you.</h3></a>
 
     </div>
 
